apigateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
      - name: apigateway
        image: your-docker-repo/apigateway:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: apigateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
