istio-ingressgateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /grpcservice
    route:
    - destination:
        host: grpcservice
        port:
          number: 80
  - match:
    - uri:
        prefix: /authservice
    route:
    - destination:
        host: authservice
        port:
          number: 80
  - match:
    - uri:
        prefix: /apigateway
    route:
    - destination:
        host: apigateway
        port:
          number: 80
  - match:
    - uri:
        prefix: /identityserver
    route:
    - destination:
        host: identityserver-service
        port:
          number: 80
